<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2f3646"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_id_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/price_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200sp">


       <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/faltuimage" />

        <!--<com.google.android.gms.maps.MapView
            android:id="@+id/mp1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        -->
       <!-- <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="148dp"

            app:liteMode="true"
            app:mapType="normal" />-->
        <!--<fragment
            android:id="@+id/location_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />-->

    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:background="@color/bgContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">



        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="#B2DFDB" />


        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_from_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/from_badge" />

                <TextView
                    android:id="@+id/content_from_address_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_from_badge"
                    android:layout_below="@id/content_from_badge"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_from_address_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_from_address_1"
                    android:layout_below="@id/content_from_address_1"
                    android:text="@string/content_from2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_to_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/to_badge" />

                <TextView
                    android:id="@+id/content_to_address_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_to_badge"
                    android:layout_below="@id/content_to_badge"
                    android:text="@string/content_to1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_to_address_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_to_address_1"
                    android:layout_below="@id/content_to_address_1"
                    android:text="@string/content_to2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/content_delivery_time"
                    android:text="HARD\nBRAKES"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="8sp"
                    android:lines="2"
                    android:singleLine="false"/>

                <TextView
                    android:id="@+id/content_delivery_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/mainTextColor"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <!--<TextView
                    android:id="@+id/content_delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_delivery_time"
                    android:layout_below="@id/content_delivery_time"
                    android:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_deadline_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HARD\nACCELARATIONS"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8sp"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@+id/content_deadline_time"/>

                <TextView
                    android:id="@+id/content_deadline_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/mainTextColor"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_deadline_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_deadline_time"
                    android:layout_below="@id/content_deadline_time"
                    android:text=""
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <!-- request button -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="SHARE DETAILS"
            android:background="#2f3646"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="suggestions"
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>